--- a/e-commerce/client/tsconfig.json
+++ b/e-commerce/client/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/Payment.js", "pages/Login.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/Payment.js", "pages/Login.js", "components/Layout.js", "pages/OrderHistory.js", "pages/orders/[id].js", "pages/Cart.js", "pages/_app.js", "pages/product/[slug].js", "components/ProductItems.js", "components/ProductItems.js", "pages/Shipping.js", "pages/Register.js", "pages/Profile.js", "pages/PlaceOrder.js"],
   "exclude": ["node_modules"]
 }
