--- a/e-commerce/client/.eslintrc.json
+++ b/e-commerce/client/.eslintrc.json
@@ -1,4 +1,8 @@
 {
   "env":{"browser":true,"node":true,"es6":true},
-  "extends": "next/core-web-vitals"
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
 }
