--- a/e-commerce/client/package.json
+++ b/e-commerce/client/package.json
@@ -39,6 +39,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.25",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
